--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.data.mongodb.password=password
 spring.data.mongodb.uri=mongodb://localhost:27017/freespace
 
 auth.url=/api/v1/auth/**
+
+server.address=192.168.1.120
